- BUG#34710366: Django implementation does not pass unit tests
- BUG#34689812: Fix datetime conversion when using prepared cursors
- BUG#34675508: Character set 'utf8' unsupported in python mysql connector when using MariaDB
- BUG#34556157: Kerberos authorization fails when using SSPI as security interface
- BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
- BUG#32625155: Tests fail against group replication cluster
- BUG#30089671: Fix decoding VARBINARY columns when using a prepared cursor
- BUG#28020811: Fix multiple reference leaks in the C extension
- BUG#27426532: Reduce callproc roundtrip time
- BUG#24364556: Improve warning behavior

v8.0.31
=======

- WL#15156: Add support for Python 3.11
- BUG#34373612: Fix the assumption that gcc is the default compiler
- BUG#34283402: Binary data starting with 0x00 are returned as empty string
- BUG#34217492: Exec of stored procedures with args fails when db prefix used
- BUG#33987119: TEXT and with a _bin collation (e.g: utf8mb4_bin) are considered as bytes object
- BUG#28491115: Connector/Python crashes on 0 time value
- BUG#28295478: Align exception types raised by pure Python and c-ext
- BUG#27634910: Add warning count method to cursors
- BUG#21529893: Resultset handling not proper in C-Python with c-ext
- BUG#21463298: Fix weakly-referenced object no longer exists exception
- BUG#21402805: Unbound local error when charset name is given as empty to set_charset_collation()

v8.0.30
=======

- WL#15212: Update collation mappings
- WL#15151: Increase to 88 characters per line
- WL#15137: Fix linting issues
- WL#15035: Enforce PEP 7 and PEP 8 coding style
- WL#14822: Refactor the authentication plugin mechanism
- WL#14815: Support OpenSSL 3.0
- BUG#34260344: Disallow empty strings in collection fields
- BUG#34231226: Generated classes do not work with the latest Protobuf
- BUG#34228442: Fix NO_BACKSLASH_ESCAPES SQL mode support in c-ext