@@ -7300,3 +7300,33 @@ class BugOra34499578(tests.MySQLConnectorTests):
                 ),
                 "Batch insert failed!",
             )
+
+
+class BugOra34467201(tests.MySQLConnectorTests):
+    """BUG#34467201: Add init_command connection option
+
+    With this patch, support for the inti_command option is added as
+    part of the connection settings. This new option allows the user to
+    specify a command to be executed right after the connection is
+    established, that's to say, as part of the connection initialization.
+    """
+
+    var_name = "test_var"
+    var_value = "BugOra34467201"
+
+    def setUp(self):
+        config = tests.get_mysql_config()
+        config["init_command"] = f"SET @{self.var_name}='{self.var_value}'"
+        self.cnx = mysql.connector.connect(**config)
+
+    def tearDown(self):
+        with self.cnx.cursor() as cur:
+            cur.execute(f"SET @{self.var_name} = NULL")
+        self.cnx.close()
+
+    @foreach_cnx
+    def test_init_command(self):
+        with self.cnx.cursor() as cur:
+            cur.execute(f"SELECT @{self.var_name}")
+            res = cur.fetchall()
+            self.assertEqual((self.var_value,), res[0])
