@@ -19,6 +19,7 @@ v8.0.32
 - BUG#34675508: Character set 'utf8' unsupported in python mysql connector when using MariaDB
 - BUG#34556157: Kerberos authorization fails when using SSPI as security interface
 - BUG#34499578: MySQLCursor.executemany() fails to correctly identify BULK data loading ops
+- BUG#34467201: Add init_command connection option
 - BUG#32625155: Tests fail against group replication cluster
 - BUG#30089671: Fix decoding VARBINARY columns when using a prepared cursor
 - BUG#28020811: Fix multiple reference leaks in the C extension
